--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@draft-js-plugins/editor": "^4.1.4",
     "@draft-js-plugins/image": "^4.1.4",
+    "@next/font": "^14.2.15",
     "@pdftron/webviewer": "^10.12.0",
+    "@simplepdf/react-embed-pdf": "^1.8.1",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "next": "^14.2.14",
     "react": "^18",
@@ -20,6 +23,7 @@
   "devDependencies": {
     "@types/draft-js": "^0.11.18",
     "@types/jest": "^29.5.13",
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
